--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,10 @@
-version: '3'
+version: '2'
 services:
   app:
     build: .
     environment:
-      - REDIS_HOST=redis
-      - REDIS_PORT=6379
+      - HTTP_PORT=80
+    expose:
+      - "80"
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
-
-  redis:
-    image: "redis:latest"
