--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,5 +2,7 @@ version: '2'
 services:
   app:
     build: .
+    environment:
+      - "LETS_ENCRYPT_EMAIL=${LETS_ENCRYPT_EMAIL}"
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
