--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -33,6 +33,14 @@
   name = "github.com/falafeljan/docker-recreate"
   version = "1.0.1"
 
+[[constraint]]
+  name = "github.com/falafeljan/gin-simple-token-middleware"
+  version = "0.1.0"
+
+[[constraint]]
+  name = "github.com/gin-contrib/cors"
+  revision = "6f0a820f94bea07359ec77c26855ca8cf6762739"
+
 [[override]]
   name = "github.com/docker/docker"
   revision = "a422774e593b33bd287d9890544ad9e09b380d8c"
