--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,6 @@ before_install:
   - curl -L -s https://github.com/golang/dep/releases/download/v${DEP_VERSION}/dep-linux-amd64 -o $GOPATH/bin/dep
   - chmod +x $GOPATH/bin/dep
 install:
-  - make all
+  - make prebuild-ci
+script:
+  - make pure-build
